Ensure entrypoint.sh is executable

--- a/keydump/Dockerfile
+++ b/keydump/Dockerfile
@@ -3,6 +3,8 @@ LABEL maintainer="Jeremy T. Bouse <Jeremy.Bouse@UnderGrid.net>"
 
 ENV KEYDUMP_URL="https://mirror.cyberbits.eu/sks/dump/"
 
+COPY entrypoint.sh /
+
 RUN set -ex \
     && apt-get update && apt-get install -y \
         jq \
@@ -10,9 +12,8 @@ RUN set -ex \
         wget \
         rsync \
     && mkdir -p /var/lib/sks/dump \
-    && rm -rf /var/lib/apt/lists/*
-
-COPY entrypoint.sh /
+    && rm -rf /var/lib/apt/lists/* \
+    && chmod +x /entrypoint.sh
 
 WORKDIR /var/lib/sks
 ENTRYPOINT [ "/entrypoint.sh" ]
